# selenium-killer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-actions.yml
selenium-form-killer/: killer.py
selenium-form-killer/capmonster/: captcha_breaker.py
selenium_form_killer/: __init__.py  forms.py  killer.py
selenium_form_killer/anti_captcha/: __init__.py  anti_captcha.py
selenium_form_killer/capmonster/: __init__.py  captcha_breaker.py
selenium_form_killer/log/: logger.py
selenium_form_killer/types/: generic_types.py  selenium_types.py
selenium_form_killer/util/: util.py
selenium_killer/: killer.py
selenium_killer/base/: killer_base.py
selenium_killer/capmonster/: captcha_breaker.py
selenium_killer/forms/: __init__.py  input.py
selenium_killer/util/: util.py
tests/: test_anti_captcha.py  test_selenium_killer.py
