[tool.poetry]
name = "selenium-form-killer"
version = "0.1.7"
license = "MIT"
description = ""
authors = ["Rodrigoneal <rodrigho2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
typing-extensions = "^4.9.0"
bs4 = "^0.0.2"
capmonstercloudclient = "^1.3.4"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pytest-asyncio = "^0.23.5"
chardet = "^5.2.0"
loguru = "^0.7.2"
respx = "^0.21.1"
coverage = "^7.5.0"
mypy = "^1.10.0"
playwright = "^1.43.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"


[tool.poetry.group.linter.dependencies]
ruff = "^0.2.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-p no:warnings"